--- a/desktopApp/pom.xml
+++ b/desktopApp/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>core</artifactId>
             <version>1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.14</version>
+        </dependency>
     </dependencies>
 
 </project>
