--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.7.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
