--- a/core/pom.xml
+++ b/core/pom.xml
@@ -38,6 +38,11 @@
             <version>5.3.7.Final</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>scijava-common</artifactId>
+            <version>2.77.0</version>
+        </dependency>
     </dependencies>
 
 </project>
