--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>scijava-common</artifactId>
             <version>2.77.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
