--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.url=jdbc:h2:file:~/kurlyk
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
