--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
