--- a/webApp/src/main/resources/application.properties
+++ b/webApp/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 # H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 
+spring.jpa.database=postgresql
+
+spring.datasource.url=jdbc:postgresql://nealbow.host:5432/vyatsu_db
+spring.datasource.username=vyatsu_user
+spring.datasource.password=vyatsu_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/kurlyk
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/kurlyk
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
